syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

message DeleteObligationRequest {
    int32 ObligationId = 1;
}