syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

message GetCustomerRequest {
    int32 CustomerOnSAId = 1;
}