syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

message GetObligationRequest {
    int32 ObligationId = 1;
}